--- a/integration-demo-payments/src/main/AndroidManifest.xml
+++ b/integration-demo-payments/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:theme="@style/AppTheme">
 
         <activity android:name=".SampleStartActivity"
-            android:noHistory="true">
+            android:noHistory="true"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
