--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,4 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-apply from: 'dependencies.gradle'
 
 buildscript {
     // Gradle will not find vars defined in an external file when referring to them
@@ -12,12 +11,14 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.10"
-        classpath "org.jetbrains.kotlin:kotlin-android-extensions:1.3.10"
-        classpath 'org.jetbrains.dokka:dokka-android-gradle-plugin:0.9.16'
+        classpath 'com.android.tools.build:gradle:7.0.4'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
+        classpath "org.jetbrains.kotlin:kotlin-android-extensions:1.6.10"
+//        classpath "org.jetbrains.dokka:dokka-gradle-plugin:1.6.10"
     }
 }
+
+apply from: 'dependencies.gradle'
 
 allprojects {
 
@@ -29,5 +30,12 @@ allprojects {
             dirs 'libs'
         }
         maven { url 'https://dl.bintray.com/jetbrains/anko' }
+    }
+}
+
+gradleEnterprise {
+    buildScan {
+        termsOfServiceUrl = "https://gradle.com/terms-of-service"
+        termsOfServiceAgree = "yes"
     }
 }
