--- a/integration-demo/build.gradle
+++ b/integration-demo/build.gradle
@@ -1,6 +1,8 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+plugins {
+    id 'com.android.application'
+    id 'kotlin-android'
+    id 'kotlin-android-extensions'
+}
 
 Properties localProperties = new Properties()
 File propertiesFile = project.rootProject.file('local.properties')
@@ -9,14 +11,24 @@ if (propertiesFile.exists()) {
 }
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 31
 
     defaultConfig {
         applicationId "ru.modulkassa.pos.integration.demo"
         minSdkVersion 21
-        targetSdkVersion 26
+        targetSdkVersion 31
         versionCode 3
         versionName "1.2"
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
+    }
+
+    // For Kotlin projects
+    kotlinOptions {
+        jvmTarget = "11"
     }
 
     lintOptions {
@@ -43,7 +55,7 @@ android {
 
 dependencies {
     implementation project(':integration-library')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.3.10"
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.6.10"
+    implementation 'androidx.appcompat:appcompat:1.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
 }
