--- a/integration-library/build.gradle
+++ b/integration-library/build.gradle
@@ -1,8 +1,10 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'maven-publish'
-apply plugin: 'org.jetbrains.dokka-android'
+plugins {
+    id 'com.android.library'
+    id 'kotlin-android'
+    id 'kotlin-android-extensions'
+    id 'maven-publish'
+    id 'org.jetbrains.dokka' version '1.6.10'
+}
 
 def libVersionName = "1.1.1"
 version = libVersionName
@@ -15,6 +17,17 @@ android {
         minSdkVersion versions.minSdk
         targetSdkVersion versions.targetSdk
         versionName libVersionName
+        buildConfigField 'String', 'VERSION_NAME', "\"${libVersionName}\""
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
+    }
+
+    // For Kotlin projects
+    kotlinOptions {
+        jvmTarget = "11"
     }
 
     lintOptions {
@@ -46,6 +59,31 @@ Properties properties = new Properties()
 File propertiesFile = project.rootProject.file('local.properties')
 if (propertiesFile.exists()) {
     properties.load(propertiesFile.newDataInputStream())
+}
+
+// todo по-любому не работает
+dokkaJavadoc.configure {
+//    outputDirectory.set(buildDir.resolve("javadoc"))
+//    outputDirectory.set(buildDir.resolve("dokka"))
+}
+
+//task dokkaJavadoc(type: org.jetbrains.dokka.gradle.DokkaTask) {
+//    outputFormat = 'javadoc'
+//    outputDirectory.set(buildDir.resolve("javadoc"))
+//}
+
+task packageJavadoc(type: Jar, dependsOn: 'dokkaJavadoc') {
+    from "$buildDir/javadoc"
+    classifier = 'javadoc'
+}
+
+task sourceJar(type: Jar) {
+    from android.sourceSets.main.java.srcDirs
+    classifier "sources"
+}
+
+artifacts {
+    archives sourceJar, packageJavadoc
 }
 
 publishing {
@@ -94,21 +132,4 @@ publishing {
     }
 }
 
-task dokkaJavadoc(type: org.jetbrains.dokka.gradle.DokkaTask) {
-    outputFormat = 'javadoc'
-    outputDirectory = "$buildDir/javadoc"
-}
 
-task packageJavadoc(type: Jar, dependsOn: 'dokkaJavadoc') {
-    from "$buildDir/javadoc"
-    classifier = 'javadoc'
-}
-
-task sourceJar(type: Jar) {
-    from android.sourceSets.main.java.srcDirs
-    classifier "sources"
-}
-
-artifacts {
-    archives sourceJar, packageJavadoc
-}
