--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,5 @@
+plugins {
+    id "com.gradle.enterprise" version "3.8"
+}
+
 include ':integration-demo', ':integration-library', ':integration-demo-payments'
