--- a/integration-demo-payments/build.gradle
+++ b/integration-demo-payments/build.gradle
@@ -57,9 +57,9 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':integration-library')
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.3.10"
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
+    implementation libraries.kotlin
+    implementation 'androidx.appcompat:appcompat:1.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
 
-    testImplementation 'junit:junit:4.12'
+    testImplementation libraries.junit
 }
