--- a/integration-demo/build.gradle
+++ b/integration-demo/build.gradle
@@ -55,7 +55,7 @@ android {
 
 dependencies {
     implementation project(':integration-library')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.6.10"
+    implementation libraries.kotlin
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
 }
