--- a/integration-library/build.gradle
+++ b/integration-library/build.gradle
@@ -6,7 +6,7 @@ plugins {
     id 'org.jetbrains.dokka' version '1.6.10'
 }
 
-def libVersionName = "1.1.23" //todo
+def libVersionName = "1.1.28" //todo
 version = libVersionName
 group 'ru.modulkassa.pos'
 
@@ -21,13 +21,13 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 
     // For Kotlin projects
     kotlinOptions {
-        jvmTarget = "11"
+        jvmTarget = JavaVersion.VERSION_1_8
     }
 
     lintOptions {
