--- a/integration-demo/build.gradle
+++ b/integration-demo/build.gradle
@@ -11,12 +11,12 @@ if (propertiesFile.exists()) {
 }
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion versions.compileSdk
 
     defaultConfig {
         applicationId "ru.modulkassa.pos.integration.demo"
-        minSdkVersion 21
-        targetSdkVersion 31
+        minSdkVersion versions.minSdk
+        targetSdkVersion versions.targetSdk
         versionCode 3
         versionName "1.2"
     }
